--- a/index.html
+++ b/index.html
@@ -60,5 +60,28 @@
         </div>
       </div>
     </header>
+    <section class="company container">
+      <div class="company-logo">
+        <img src="./logos/Alibaba.svg" alt="" />
+      </div>
+      <div class="company-logo">
+        <img src="./logos/Amazon.svg" alt="" />
+      </div>
+      <div class="company-logo">
+        <img src="./logos/Daraz.pk Logo.svg" alt="" />
+      </div>
+      <div class="company-logo">
+        <img src="./logos/Ebay.svg" alt="" />
+      </div>
+      <div class="company-logo">
+        <img src="./logos/Rakuten.svg" alt="" />
+      </div>
+      <div class="company-logo">
+        <img src="./logos/Target.svg" alt="" />
+      </div>
+      <div class="company-logo">
+        <img src="./logos/Walmart.svg" alt="" />
+      </div>
+    </section>
   </body>
 </html>
