--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
   <body>
     <!-- Hero Banner -->
     <header>
-      <div class="container">
-        <nav class="navbar">
-          <!--  -->
+      <nav class="navbar">
+        <div class="container">
           <h1 class="logo">Influencer products</h1>
           <ul>
             <li><a href="">Home</a></li>
@@ -42,8 +41,10 @@
               <a href=""><i class="fas fa-shopping-cart fa-lg"></i></a>
             </li>
           </ul>
-        </nav>
-        <div class="hero-banner">
+        </div>
+      </nav>
+      <div class="hero-banner">
+        <div class="container">
           <div class="banner-text">
             <h1>Start your Journey as Influencer</h1>
             <p>
@@ -60,28 +61,189 @@
         </div>
       </div>
     </header>
-    <section class="company container">
-      <div class="company-logo">
-        <img src="./logos/Alibaba.svg" alt="" />
-      </div>
-      <div class="company-logo">
-        <img src="./logos/Amazon.svg" alt="" />
-      </div>
-      <div class="company-logo">
-        <img src="./logos/Daraz.pk Logo.svg" alt="" />
-      </div>
-      <div class="company-logo">
-        <img src="./logos/Ebay.svg" alt="" />
-      </div>
-      <div class="company-logo">
-        <img src="./logos/Rakuten.svg" alt="" />
-      </div>
-      <div class="company-logo">
-        <img src="./logos/Target.svg" alt="" />
-      </div>
-      <div class="company-logo">
-        <img src="./logos/Walmart.svg" alt="" />
+    <!-- Company -->
+    <section class="company">
+      <div class="container">
+        <div class="company-logo">
+          <img src="./logos/Alibaba.svg" alt="" />
+        </div>
+        <div class="company-logo">
+          <img src="./logos/Amazon.svg" alt="" />
+        </div>
+        <div class="company-logo">
+          <img src="./logos/Daraz.pk Logo.svg" alt="" />
+        </div>
+        <div class="company-logo">
+          <img src="./logos/Ebay.svg" alt="" />
+        </div>
+        <div class="company-logo">
+          <img src="./logos/Rakuten.svg" alt="" />
+        </div>
+        <div class="company-logo">
+          <img src="./logos/Target.svg" alt="" />
+        </div>
+        <div class="company-logo">
+          <img src="./logos/Walmart.svg" alt="" />
+        </div>
       </div>
     </section>
+    <!-- Popular Collection -->
+
+    <section class="product-container">
+      <h1>Popular Collection</h1>
+      <div class="container">
+        <div class="all-products">
+          <div class="product">
+            <div class="product-photo">
+              <img src="./images/tripod.png" alt="" />
+            </div>
+            <h3 class="product-name">Flex Tripod</h3>
+            <h3 class="price">$50.48</h3>
+            <span><i class="fas fa-star"></i></span>
+            <span><i class="fas fa-star"></i></span>
+            <span><i class="fas fa-star"></i></span>
+            <span><i class="fas fa-star"></i></span>
+            <span><i class="fas fa-star-half-alt"></i></span>
+            <span>4.99</span>
+            <p>Wordwide shifting available Buyers protection possible!</p>
+          </div>
+          <div class="product">
+            <div class="product-photo">
+              <img src="./images/mic.png" alt="" />
+            </div>
+            <h3 class="product-name">Mircrophone</h3>
+            <h3 class="price">$120.25</h3>
+            <span><i class="fas fa-star"></i></span>
+            <span><i class="fas fa-star"></i></span>
+            <span><i class="fas fa-star"></i></span>
+            <span><i class="fas fa-star"></i></span>
+            <span><i class="fas fa-star-half-alt"></i></span>
+            <span>4.99</span>
+            <p>Wordwide shifting available Buyers protection possible!</p>
+          </div>
+          <div class="product">
+            <div class="product-photo">
+              <img src="./images/airpod.png" alt="" />
+            </div>
+            <h3 class="product-name">Airbuds</h3>
+            <h3 class="price">$100.00</h3>
+            <span><i class="fas fa-star"></i></span>
+            <span><i class="fas fa-star"></i></span>
+            <span><i class="fas fa-star"></i></span>
+            <span><i class="fas fa-star"></i></span>
+            <span><i class="fas fa-star-half-alt"></i></span>
+            <span>4.99</span>
+            <p>Wordwide shifting available Buyers protection possible!</p>
+          </div>
+          <div class="product">
+            <div class="product-photo">
+              <img src="./images/drone.png" alt="" />
+            </div>
+            <h3 class="product-name">Drone</h3>
+            <h3 class="price">$980.25</h3>
+            <span><i class="fas fa-star"></i></span>
+            <span><i class="fas fa-star"></i></span>
+            <span><i class="fas fa-star"></i></span>
+            <span><i class="fas fa-star"></i></span>
+            <span><i class="fas fa-star-half-alt"></i></span>
+            <span>4.99</span>
+            <p>Wordwide shifting available Buyers protection possible!</p>
+          </div>
+          <div class="product">
+            <div class="product-photo">
+              <img src="./images/lights.png" alt="" />
+            </div>
+            <h3 class="product-name">Light Setup</h3>
+            <h3 class="price">$1200.00</h3>
+            <span><i class="fas fa-star"></i></span>
+            <span><i class="fas fa-star"></i></span>
+            <span><i class="fas fa-star"></i></span>
+            <span><i class="fas fa-star"></i></span>
+            <span><i class="fas fa-star-half-alt"></i></span>
+            <span>4.99</span>
+            <p>Wordwide shifting available Buyers protection possible!</p>
+          </div>
+          <div class="product">
+            <div class="product-photo">
+              <img src="./images/setup.png" alt="" />
+            </div>
+            <h3 class="product-name">Photoshoot Set</h3>
+            <h3 class="price">$820.40</h3>
+            <span><i class="fas fa-star"></i></span>
+            <span><i class="fas fa-star"></i></span>
+            <span><i class="fas fa-star"></i></span>
+            <span><i class="fas fa-star"></i></span>
+            <span><i class="fas fa-star-half-alt"></i></span>
+            <span>4.99</span>
+            <p>Wordwide shifting available Buyers protection possible!</p>
+          </div>
+          <div class="product">
+            <div class="product-photo">
+              <img src="./images/camera.png" alt="" />
+            </div>
+            <h3 class="product-name">Vlogging Camera</h3>
+            <h3 class="price">$1800.80</h3>
+            <span><i class="fas fa-star"></i></span>
+            <span><i class="fas fa-star"></i></span>
+            <span><i class="fas fa-star"></i></span>
+            <span><i class="fas fa-star"></i></span>
+            <span><i class="fas fa-star-half-alt"></i></span>
+            <span>4.99</span>
+            <p>Wordwide shifting available Buyers protection possible!</p>
+          </div>
+          <div class="product">
+            <div class="product-photo">
+              <img src="./images/single-light.png" alt="" />
+            </div>
+            <h3 class="product-name">Green Screen</h3>
+            <h3 class="price">$25.48</h3>
+            <span><i class="fas fa-star"></i></span>
+            <span><i class="fas fa-star"></i></span>
+            <span><i class="fas fa-star"></i></span>
+            <span><i class="fas fa-star"></i></span>
+            <span><i class="fas fa-star-half-alt"></i></span>
+            <span>4.99</span>
+            <p>Wordwide shifting available Buyers protection possible!</p>
+          </div>
+          <div class="product">
+            <div class="product-photo">
+              <img src="./images/action.png" alt="" />
+            </div>
+            <h3 class="product-name">Action Camera</h3>
+            <h3 class="price">$380.00</h3>
+            <span><i class="fas fa-star"></i></span>
+            <span><i class="fas fa-star"></i></span>
+            <span><i class="fas fa-star"></i></span>
+            <span><i class="fas fa-star"></i></span>
+            <span><i class="fas fa-star-half-alt"></i></span>
+            <span>4.99</span>
+            <p>Wordwide shifting available Buyers protection possible!</p>
+          </div>
+        </div>
+        <a href="/">Preebook Now <i class="fas fa-arrow-right"></i></a>
+      </div>
+    </section>
+    <!-- Footer Section -->
+    <footer>
+      <div class="footer-wrapper">
+        <h1 class="m-heading">Influencer products</h1>
+        <p>Copyright © 2020 influencer products</p>
+        <p>All rights reserved</p>
+        <div class="social-icon">
+          <a href="#">
+            <p><i class="fab fa-instagram"></i></p>
+          </a>
+          <a href="#">
+            <p><i class="fab fa-instagram"></i></p>
+          </a>
+          <a href="#">
+            <p><i class="fab fa-instagram"></i></p>
+          </a>
+          <a href="#">
+            <p><i class="fab fa-instagram"></i></p>
+          </a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
