--- a/index.html
+++ b/index.html
@@ -227,20 +227,20 @@
     <footer>
       <div class="footer-wrapper">
         <h1 class="m-heading">Influencer products</h1>
-        <p>Copyright © 2020 influencer products</p>
+        <p>Copyright &copy; 2020 influencer products</p>
         <p>All rights reserved</p>
         <div class="social-icon">
           <a href="#">
-            <p><i class="fab fa-instagram"></i></p>
+            <i class="fab fa-instagram"></i>
           </a>
           <a href="#">
-            <p><i class="fab fa-instagram"></i></p>
+            <i class="fab fa-dribbble"></i>
           </a>
           <a href="#">
-            <p><i class="fab fa-instagram"></i></p>
+            <i class="fab fa-twitter"></i>
           </a>
           <a href="#">
-            <p><i class="fab fa-instagram"></i></p>
+            <i class="fab fa-youtube"></i>
           </a>
         </div>
       </div>
