--- a/index.html
+++ b/index.html
@@ -223,6 +223,42 @@
         <a href="/">Preebook Now <i class="fas fa-arrow-right"></i></a>
       </div>
     </section>
+    <!-- Our Blog -->
+    <section class="our-blog">
+      <h1 class="m-heading">Our Blog</h2>
+      <div class="container">
+        <div class="blog">
+          <div class="feature-img">
+            <img src="./images/blog-1.jpg" alt="blog" />
+          </div>
+          <div class="blog-details">
+            <h2>5 Best video editing tips & tricks</h2>
+            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            <a href="/" class="btn">Read More</a>
+          </div>
+        </div>
+        <div class="blog">
+          <div class="feature-img">
+            <img src="./images/blog-1.jpg" alt="blog" />
+          </div>
+          <div class="blog-details">
+            <h2>How to make vlogging video</h2>
+            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            <a href="/" class="btn">Read More</a>
+          </div>
+        </div>
+        <div class="blog">
+          <div class="feature-img">
+            <img src="./images/blog-1.jpg" alt="blog" />
+          </div>
+          <div class="blog-details">
+            <h2>How to earn money from youtube</h2>
+            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            <a href="/" class="btn">Read More</a>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- Footer Section -->
     <footer>
