--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
           <div class="banner-text">
             <h1>Start your Journey as Influencer</h1>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem
-              vestibulum sed scelerisque eros. Lectus faucibus.
+              Best gear gagets for your Journey. we are provding high quality product for your set up. buy anything from us today & get 30% discount.
             </p>
             <a href="/" class="btn"
               >Preebook Now <i class="fas fa-arrow-right"></i
@@ -233,7 +232,7 @@
           </div>
           <div class="blog-details">
             <h2>5 Best video editing tips & tricks</h2>
-            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            <p>Knowing all the best video editing tips and tricks will benefit you hugely as a creative making videos. As you know, a good edit is as just important as what happens on location, but editing can be a tricky process. This means collecting all the information, tips and tricks you can is a crucial part of your process to help smooth out your workflow and elevate your results.</p>
             <a href="/" class="btn">Read More</a>
           </div>
         </div>
@@ -243,7 +242,7 @@
           </div>
           <div class="blog-details">
             <h2>How to make vlogging video</h2>
-            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            <p>So you want to be a YouTube star? Or maybe you’re simply an expert who wants to share important knowledge with the world. Regardless of why you want to start your own vlog or what you plan to feature, there are some best practices that ensure your vlog channel gets success that goes beyond the approval of your ever-supportive Aunt Sally.</p>
             <a href="/" class="btn">Read More</a>
           </div>
         </div>
@@ -253,7 +252,7 @@
           </div>
           <div class="blog-details">
             <h2>How to earn money from youtube</h2>
-            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            <p>YouTube is half the internet: that’s 1.9 billion users logging in every month. But at the same time, 500 hours of video are uploaded to the So you already know this article is not going to be about how easy it is to buy a Swiss watch with the ad revenue from your YouTube views. (Though if you have millions of video views, you could probably at least rent one. Wait.)</p>
             <a href="/" class="btn">Read More</a>
           </div>
         </div>
